fix: make advanced wireless tool Java 8 compatible